Routing and views (Sum game rating scores )

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -41,15 +41,15 @@
                             </a>
                         </li>
                         <li ui-sref-active="active">
-                            <a ui-sref="team" ng-click="vm.collapseNavbar()">
+                            <a ui-sref="game-rating-avg" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                <span>Avg Team</span>
+                                <span>Avg Game Rating</span>
                             </a>
                         </li>
                         <li ui-sref-active="active">
-                            <a ui-sref="favourite-player" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                <span>Favourite Player</span>
+                            <a ui-sref="game-rating-sum" ng-click="vm.collapseNavbar()">
+                                <span class="glyphicon glyphicon-dashboard"></span>&nbsp;
+                                <span>Sum Games</span>
                             </a>
                         </li>
                         <li ui-sref-active="active">
